--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ano</title>
+    <title>Meus objetivos do ano passa de ano</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -105,8 +105,8 @@
                             <p class="contador-digito-numero" id="seg3"></p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
-                    </div>
-                </div>
+                    <h1>que ir para facudade 2026</h1>
+                <h2>quero passa um policela</h2>
             </div>
         </div>
     </section>
