--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         </div>
                     <h1>que ir para facudade 2026</h1>
                 <h2>quero passa um policela</h2>
-            </div>
+            <h3>passa de ano na escola </h3>
         </div>
     </section>
     <script src="main.js"></script>
