--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus fffffffff<span>_</span></h2>
+        <h2 class="titulo-principal">Meus da vida<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Cursos na Alura</button>
-                <button class="botao">Criar projetos em Javascript</button>
+                <button class="botao ativo">ir para a facudade>
+                <button class="botao">Criar passa de ano</button>
                 <button class="botao">Criar um portfolio</button>
-                <button class="botao">Atualizar meu currículo</button>
+                <button class="botao">2024</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
@@ -61,8 +61,8 @@
                             <p class="contador-digito-numero" id="seg1"></p>
                             <p class="contador-digito-texto">seg</p>
                         </div>
-                    </div>
-                </div>
+                    <a href="https://docs.google.com/spreadsheets/d/1C4GBtUbFPr7FOloSoO1Sip1OLJttno_dEaEM2FeNkyk/edit?usp=sharing"projerto de vida</a>
+                <a  href="https://www.google.com/search?q=rio+de+sao+paulo&oq=rio+de+sao+paulo&aqs=chrome..69i57.27912j0j1&sourceid=chrome&ie=UTF-8"projerto da escola</a>
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
