--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <div class="botoes">
                 <button class="botao ativo">ir para a facudade>
                 <button class="botao">Criar passa de ano</button>
-                <button class="botao">Criar um portfolio</button>
+                <button class="botao">arruma um trabalho</button>
                 <button class="botao">2024</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h3 class="aba-conteudo-titulo-principal">2029</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">tem filho</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias0"></p>
@@ -44,7 +44,8 @@
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">2025</h3>
                     <h4 class="aba-conteudo-titulo-secundario">passa de anos na escola</h4>
-                    <div class="contador">
+                    <a href="https://docs.google.com/spreadsheets/d/1C4GBtUbFPr7FOloSoO1Sip1OLJttno_dEaEM2FeNkyk/edit?usp=sharing
+                    "
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias1"></p>
                             <p class="contador-digito-texto">dias</p>
@@ -88,7 +89,7 @@
                 <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-principal">2028</h3>
                     <h4 class="aba-conteudo-titulo-secundario">aula de escola/h4>
-                    <a href="https://docs.google.com/spreadsheets/d/1C4GBtUbFPr7FOloSoO1Sip1OLJttno_dEaEM2FeNkyk/edit?usp=sharing"projerto da vida,</a>
+                    
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias3"></p>
                             <p class="contador-digito-texto">dias</p>
